[package]
name = "mxa-lite"
version = "0.1.0"
edition = "2024"
authors = ["Koi Coco <admin@koito.fun>"]
resolver = "2"

[dependencies]
anyhow = "1.0.86"
futures-util = "0.3.30"
log = "0.4"
maplit = "1.0.2"
reqwest = { version = "0.12.5", features = [
  "json",
  "blocking",
  "stream",
  "multipart",
] }
serde = { version = "1.0.206", features = ["derive"] }
serde_json = "1.0.124"
tokio = { version = "1.39.2", features = ["full"] }
tokio-tungstenite = "0.23.1"
openssl = { version = "*", features = ["vendored"] }
simple_logger = "5.0.0"
flatbuffers = { version = "25.1.24", features = ["serde", "serialize"] }
