[package]
name = "mxa-lite"
version = "0.1.0"
edition = "2024"
authors = ["Koi Coco <admin@koito.fun>"]

[dependencies]
anyhow = "1.0.86"
futures-util = "0.3.30"
log = "0.4"
reqwest = { version = "0.12.5", features = [
  "stream",
], default-features = false }
serde = { version = "1.0.206", features = ["derive"] }
serde_json = "1.0.124"
tokio = { version = "1.39.2", features = ["full"] }
tokio-tungstenite = "0.23.1"
simple_logger = "5.0.0"
